# sqlite-water-tracker.py

./: .gitignore  README.md  pyproject.toml  sqlite-water-tracker.db
src/sqlite_water_tracker/: __init__.py  ensure_db.py  schema.sql  textual_tui.py
