[project]
name = "sqlite-water-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dharmatech", email = "wayo.cavazos@gmail.com" }
]
# requires-python = ">=3.14"
requires-python = ">=3.12"
dependencies = [
    "textual>=6.7.1",
    "textual-plotext>=1.0.1",
]

[project.scripts]
sqlite-water-tracker = "sqlite_water_tracker:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
